--- a/property/import-wallet.html
+++ b/property/import-wallet.html
@@ -19,12 +19,12 @@
 		</header>
 		<div class="mui-content">
 			<ul class="import_nav">
-				<li class="active_state choose">助记词</li>
-				<li class="grey_state choose">keyStore导入</li>
+				<li class="active_state choose">keyStore导入</li>
+				<li class="grey_state choose">助记词</li>
 			</ul>
 			<div class="import_main">
-				<textarea id="keystoreString" rows="3" placeholder="输入助记词，用空格分隔" class="import_input"></textarea>
-				<p class="import_alert">使用助记词导入的同时可以修改密码</p>
+				<textarea id="keystoreString" rows="3" placeholder="请输入keyStore" class="import_input"></textarea>
+				<p class="import_alert">请输入keyStore 文件内容至输入框。或通过扫描 Private Key内容生成二维码录入</p>
 				<div class="between">
 					<h4>请输入密码</h4>
 					<p class="limit">两次密码应保持一致</p>
