--- a/property/create-wallet.html
+++ b/property/create-wallet.html
@@ -79,34 +79,67 @@
 				clearTimeout(tiner);
 				tiner = setTimeout(function() {
 					mui.showLoading("加载中...", "div");
-					var time = null;
-					clearTimeout(time);
-					time = setTimeout(function() {
-						var web3 = new Web3();
-						// 用户输入密码
-						var password = $("#pass").val();
-						// 创建账户(生成私钥、地址)
-						var account = web3.eth.accounts.create();
-						// 根据用户输入的密码加密私钥，生成 Keystore 文件
-						var keystore = JSON.stringify(account.encrypt(password));
-						if(keystore) {
+					$.ajax({
+						type: "post",
+						url: api + "dcarchain/account/create",
+						data: {},
+						beforeSend: function(xhr) {
+							xhr.setRequestHeader('x-requested-with', store.get("userInfo").token);
+						},
+						async: true,
+						success: function(ret) {
 							mui.hideLoading();
-							account.keystore = keystore;
-							account.name = $("#purseName").val();
-							// account.words = [];
-							var arr = store.get('dcarPurse');
-							arr.push(account);
-							console.log(arr);
-							store.set('dcarPurse', arr);
-							mui.toast('钱包创建成功');
-							var timer = null;
-							clearTimeout(timer);
-							timer = setTimeout(function() {
-								plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
-								plus.webview.currentWebview().close();
-							}, 1000);
+							if(ret.success) {
+								mui.toast('创建成功');
+								var arr = store.get('dcarPurse');
+								var purseData = ret.data;
+								purseData.name = $("#purseName").val();
+								purseData.money = 0;
+								arr.push(purseData);
+								store.set('dcarPurse', arr);
+								var timer = null;
+								clearTimeout(timer);
+								timer = setTimeout(function() {
+									plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
+									plus.webview.currentWebview().close();
+								}, 1000);
+							} else {
+								mui.toast(ret.msg)
+							}
+						},
+						error: function(error) {
+							mui.hideLoading();
+							mui.toast(error.responseJSON.msg);
 						}
-					}, 10);
+					});
+//					var time = null;
+//					clearTimeout(time);
+//					time = setTimeout(function() {
+//						var web3 = new Web3();
+//						// 用户输入密码
+//						var password = $("#pass").val();
+//						// 创建账户(生成私钥、地址)
+//						var account = web3.eth.accounts.create();
+//						// 根据用户输入的密码加密私钥，生成 Keystore 文件
+//						var keystore = JSON.stringify(account.encrypt(password));
+//						if(keystore) {
+//							mui.hideLoading();
+//							account.keystore = keystore;
+//							account.name = $("#purseName").val();
+//							// account.words = [];
+//							var arr = store.get('dcarPurse');
+//							arr.push(account);
+//							console.log(arr);
+//							store.set('dcarPurse', arr);
+//							mui.toast('钱包创建成功');
+//							var timer = null;
+//							clearTimeout(timer);
+//							timer = setTimeout(function() {
+//								plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
+//								plus.webview.currentWebview().close();
+//							}, 1000);
+//						}
+//					}, 10);
 				}, 1000)
 			})
 		</script>
