--- a/property/create-wallet.html
+++ b/property/create-wallet.html
@@ -18,7 +18,7 @@
 		<div class="mui-content">
 			<div class="create_main">
 				<div class="create_alert">
-					密码用于保护私钥和交易授权，强度非常重要。DCAR不存储密码，也无法帮您找回，请务必牢记
+					创建DCAR钱包
 				</div>
 				<div class="mui-input-row info">
 					<input type="text" value="" id="purseName" class="mui-input-clear" placeholder="请输入钱包名称">
