--- a/users/addOre.html
+++ b/users/addOre.html
@@ -57,6 +57,15 @@
 					setArray.push({"value": arr[i].mnemonic,"text": arr[i].name,"address": arr[i].address})
 				}
 			}
+			function getPurseName() {
+				var arr = store.get('dcarPurse');
+				var setArray = [];
+				if (arr.length > 0) {
+					for (var i=0;i<arr.length;i++) {
+						setArray.push({"value": arr[i].mnemonic,"text": arr[i].name,"address": arr[i].address})
+					}
+				}
+			}
 			// console.log(setArray.length)
 			(function($, doc) {
 				$.init();
