--- a/users/addOre.html
+++ b/users/addOre.html
@@ -58,15 +58,33 @@
 				}
 			}
 			function getPurseName() {
-				var arr = store.get('dcarPurse');
-				var setArray = [];
+				arr = store.get('dcarPurse');
+				setArray = [];
 				if (arr.length > 0) {
 					for (var i=0;i<arr.length;i++) {
 						setArray.push({"value": arr[i].mnemonic,"text": arr[i].name,"address": arr[i].address})
 					}
 				}
+				(function($, doc) {
+					$.init();
+					$.ready(function() {
+						var _getParam = function(obj, param) {
+							return obj[param] || '';
+						};
+						//普通示例
+						var userPicker = new $.PopPicker();
+						userPicker.setData(setArray);
+						var showUserPickerButton = doc.getElementById('showUserPicker');
+						var userResult = doc.getElementById('showUserPicker');
+						showUserPickerButton.addEventListener('tap', function(event) {
+							userPicker.show(function(items) {
+								choiseItem = items;
+								userResult.value = items[0].text;
+							});
+						}, false);
+					});
+				})(mui, document);
 			}
-			// console.log(setArray.length)
 			(function($, doc) {
 				$.init();
 				$.ready(function() {
